more precise one more

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         Currently learning Chinese following a life goal project.
       </div>
     </div>
-    <div class="section" id="Hire">
+    <div class="section last_section" id="Hire">
       <div class="sub_title h2">
         <b>Hire me</b>
       </div>
