--- a/hire.html
+++ b/hire.html
@@ -20,19 +20,19 @@
 				<b>Engineering</b>
 			</span><br class="mobile-break">
 			<span class="sub_title h3">
-				Data into information
+				Data→Information
 			</span><br>
 			<span class="sub_title h2">
 				<b>Analytics</b>
 			</span><br class="mobile-break">
 			<span class="sub_title h3">
-				Information into insights
+				Information→Insights
 			</span><br>
 			<span class="sub_title h2">
 				<b>Design</b>
 			</span><br class="mobile-break">
 			<span class="sub_title h3">
-			Insights into knowledge
+				Insights→Knowledge
 			</span><br>
 		</div>
 		<div class="section">
