Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="Roberto Malcotti" content="Meet Roberto and learn more about him.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link rel="stylesheet" href="style.css"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165277063-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-165277063-1');
+    </script>
   </head>
   <body>
     <div class="main_title_separator__up"></div>
