Add Google Analytics

--- a/hire.html
+++ b/hire.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-	<head>
-		<title>Data Engineering - Analytics - Design</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-  	<meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
+  <head>
+    <title>Data Engineering - Analytics - Design</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link rel="stylesheet" href="style.css"/>
-	</head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165277063-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-165277063-1');
+    </script>
+   </head>
 	<body>
 		<div class="main_title_separator__up"></div>
 		<div class="main_title h1">
