--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         the University of Applied Sciences of Southern Switzerland,
         with two additional years of Computer Science from the same institute.
         Roberto has collaborated with established companies, as well as young startups,
-        gaining experience in multiple fields, diving into any kind of data.
+        gaining experience in multiple industries, diving into any kind of data.
         He loves to design and develop tools, automating processes, connecting dots.
         As freelancer, he helps companies to get more out from their data.
         In his free time online, he explores the interaction between art and technology,
