--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <div class="sub_title h2">
         <b>Contact</b>
       </div>
+      <div class="sub_title">
+        robimalco (at) gmail (dot) com
+      </div>
       <ul class="icon_list">
         <li class="icon_list__element">
           <a href="https://mobile.twitter.com/robimalco" target="_blank" rel="noopener">
