starting writing content work

--- a/work.html
+++ b/work.html
@@ -25,25 +25,24 @@
         <b>Page in development...</b>
       </span><br><br><br><br>
       <span class="sub_title h2">
-        <b>ETL</b>
-      </span><br>
-      <span class="sub_title h2">
         <b>BI Audit</b>
-      </span><br>
+        <div class="content">
+          The way an organisation implement and structure a Business Intelligence software
+          is one of the first signals about potential inefficiencies and data bottle necks.
+          Often from inside an organisation, it is not possibile to understand opportunities 
+          and limitation, because sense of involvment and too much consuetude. This is why having 
+          a professional looking at the tool from different angles it is extremely important.
+        </div><br>
+      </span>
       <span class="sub_title h2">
         <b>BI Maintenance</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Crawling</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Features Engineering</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Automation</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Marketing Automation</b>
+        <div class="content">
+          A Business Intelligence software requires regular maintenance. From managing permissions to 
+          relocate queries, the number of daily hidden small tasks necessary to keep a system healty 
+          and up to date is often underestimate. Any organisation would require a specific role to take 
+          care of these aspects, but it is not always the case. Externalise this activity is a 
+          brave decision able soon pay to high dividends.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Query</b>
@@ -53,6 +52,42 @@
       </span><br>
       <span class="sub_title h2">
         <b>Query Optimisation</b>
+        <div class="content">
+          Nobody likes slow queries. Data needs to be deliver fast to enahnce decisions 
+          and move the business forward. Sometimes queries can be written better, while in other cases
+          tables' structure can be optimised allowing faster results. Moreover, queries' style must be
+          consistent, allowing a smart reuse of the code already written.
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Crawling</b>
+        <div class="content">
+          Any company faces the need to extract data from the web. For a multitude of reasons, having
+          the possibility to acquire data previously not available can lead to a competititive advantage.
+          Data are out there, but often not easy to access, because of time constrains or technical limitations.
+          Rely on reilable and scalable web crawers to bring your data to a next level. 
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Features Engineering</b>
+        <div class="content">
+          The biggest part of a machine learning project is the iterative process of
+          features defining and features improvement. This activity can be considered boring
+          from a data scientist point of view, because it is not directly connected with the algorithms behind the learning pipeline. However, this part is crucial and important as the algorithm itself if not even more.
+          Get support and help not only to define features, but also produce and manintain them.
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Automation</b>
+        <div class="content">
+          This section does not need to much presentation.
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Marketing Automation</b>
+      </span><br>
+      <span class="sub_title h2">
+        <b>ETL</b>
       </span><br>
       <span class="sub_title h2">
         <b>Macro</b>
