--- a/hire.html
+++ b/hire.html
@@ -254,10 +254,10 @@
         <b>Hands on</b>
       </div>
       <div class="content">
-        Through the years and the constant work, it has been possible to acquire new techniques,
+        Through the years and the constant work, it has been possible to acquire new skills,
         continuing to improve and to evolve those already present.
         The quality of the results reflects this growth.
-        Nothing beats practical examples for clarifying ideas.<br>
+        Discover all the services and opportunities to collaborate.<br>
         <a href="work.html" target="_blank" rel="noopener" class="h1 to_next">
           Find out more
         </a>
