--- a/work.html
+++ b/work.html
@@ -45,12 +45,6 @@
         </div><br>
       </span><br>
       <span class="sub_title h2">
-        <b>Query</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Query Debug</b>
-      </span><br>
-      <span class="sub_title h2">
         <b>Query Optimisation</b>
         <div class="content">
           Nobody likes slow queries. Data needs to be deliver fast to enahnce decisions 
@@ -80,23 +74,29 @@
       <span class="sub_title h2">
         <b>Automation</b>
         <div class="content">
-          This section does not need to much presentation.
+          This section does not need presentation. A digital business not able to automise processes 
+          will face sooner or later big troubles. Growing a team instead of building tools is the perfect way 
+          to waste money and energies. Automate from the day one in order to keep focusing on what
+          really matters: your business.
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Marketing Automation</b>
       </span><br>
+        <div class="content">
+          Marketing is probably the department where automation can be more significant and disruptive.
+          Not a case, marketing is also one of the biggest cost cente. Specific skills and talent is needed to
+          drive leads to a company, that's why time cannot be wasted dealing with data in unproductive ways.
+          Free your marketing department from non value added activities leaving information's flow in expert hands.
+        </div><br>
       <span class="sub_title h2">
-        <b>ETL</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Macro</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>KPIs</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Dashboard</b>
+        <b>KPIs Audit</b>
+        <div class="content">
+          KPIs are at the core of a business. Theoretically any process would require to be 
+          monitored by a KPI. There is however the bad habit to spend more time defining and building KPIs 
+          then using it. Let's make a step back, identify metrics that really matter and evolve the way 
+          they are produced and consumed.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Analysis</b>
@@ -105,13 +105,28 @@
         <b>Reporting</b>
       </span><br>
       <span class="sub_title h2">
+        <b>Dashboard</b>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Query</b>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Query Debug</b>
+      </span><br>
+      <span class="sub_title h2">
         <b>API</b>
+      </span><br>
+      <span class="sub_title h2">
+        <b>API Integration</b>
       </span><br>
       <span class="sub_title h2">
         <b>API Reverse Engineering</b>
       </span><br>
       <span class="sub_title h2">
         <b>QA</b>
+      </span><br>
+      <span class="sub_title h2">
+        <b>ETL</b>
       </span><br>
       <span class="sub_title h2">
         <b>Scripting</b>
@@ -121,9 +136,6 @@
       </span><br>
       <span class="sub_title h2">
         <b>Sheets Automation</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>API Integration</b>
       </span><br>
       <span class="sub_title h2">
         <b>Notification</b>
