--- a/work.html
+++ b/work.html
@@ -28,12 +28,12 @@
         <b>BI Audit</b>
         <div class="content">
           The way an organisation implement and structure a Business Intelligence software
-          is one of the first signals about potential inefficiencies and data bottle necks.
-          Often from inside an organisation, it is not possibile to understand opportunities 
-          and limitation, because sense of involvment and too much consuetude. This is why having 
-          a professional looking at the tool from different angles it is extremely important.
+          is one of the first signals about potential inefficiencies. Often from inside an
+          organisation, it is not possibile to understand opportunities  and limitation, 
+          this is why having  a professional looking at the tool from different angles 
+          it is extremely important.
         </div><br>
-      </span>
+      </span><br>
       <span class="sub_title h2">
         <b>BI Maintenance</b>
         <div class="content">
@@ -100,12 +100,26 @@
       </span><br>
       <span class="sub_title h2">
         <b>Analysis</b>
+        <div class="content">
+          Diving into data with the goal to analyze them is a must have skill for any person working in the
+          digital industry. However, often things get more complex and articulated. Specific tools and 
+          techniques are required to provide puntual, correct and reprudicible analysis.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Reporting</b>
+        <div class="content">
+          In the last ten years the activity of reporting has known an immense switch due to the rise 
+          of web technologies. Nowdays is not accattable anymore to rely on a person to receive a report
+          at the same hour on a daily basis. Understand how to modernize your whole reporting structure.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Dashboard</b>
+        <div class="content">
+          A dashboard should not only be considered as data, queries and charts.
+          A dashboard is a story, combining design, aesthetics, UX and UI. Details are essential, as colors, backgrounds, fonts, sizes, titles, positions, headers, alignments, approachability, efficiency and engagement. A dashboard is a real product with real use cases and real users.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Query</b>
@@ -114,13 +128,19 @@
         <b>Query Debug</b>
       </span><br>
       <span class="sub_title h2">
-        <b>API</b>
+        <b>API Development</b>
       </span><br>
       <span class="sub_title h2">
         <b>API Integration</b>
       </span><br>
       <span class="sub_title h2">
         <b>API Reverse Engineering</b>
+        <div class="content">
+          Activity strictly connected with web crawling, but also with computer security.
+          Without dealing with espionage or unhetical things, reverse engineering API is
+          necessary because documentation of a service is not properly done, so there is the
+          need to self understand how things work.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>QA</b>
