--- a/work.html
+++ b/work.html
@@ -122,46 +122,58 @@
         </div><br>
       </span><br>
       <span class="sub_title h2">
-        <b>Query</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Query Debug</b>
-      </span><br>
-      <span class="sub_title h2">
         <b>API Development</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>API Integration</b>
+        <div class="content">
+          API endpoint are critical for a business to allow external players to interact with internal data,
+          but also to ensure a fluid flow of information within internal systems. Standardise the creation of API endpoints with modern and light technologies, while having always in control their cost and performances. 
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>API Reverse Engineering</b>
         <div class="content">
           Activity strictly connected with web crawling, but also with computer security.
-          Without dealing with espionage or unhetical things, reverse engineering API is
-          necessary because documentation of a service is not properly done, so there is the
+          Without dealing with espionage or unethical things, reverse engineering API is
+          necessary because sometimes documentation of a service is not properly done, so there is the
           need to self understand how things work.
         </div><br>
       </span><br>
       <span class="sub_title h2">
-        <b>QA</b>
+        <b>Scripting and tools</b>
+        <div class="content">
+          The necessity of a digital business are so variagate and colourful that are not possible to be
+          categorised under a single umbrella. Any kind of small script and tool can save precious time,
+          especially if an activity must be repeated multiple time. It is important to have a person 
+          in a team able to make colleagues' life easier and more pleasant.
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Sheets Automation</b>
+        <div class="content">
+          For years many have tried to get rid of sheets, but the true is that they are here to stay.
+          Another true is that sheets are getting better and better, making them easier to use,
+          more intuitive and progrmamable. There are people with the talent to make sheets looking beauty 
+          and sexy, it is a luck to work closely with such a profile. 
+        </div><br>
+      </span><br>
+      <span class="sub_title h2">
+        <b>Notification</b>
+        <div class="content">
+          As anything else, also notifications have the right to be pleasant to be received and to be
+          consumed. It is not time anymore to spam unreadable bad formatted messages, considering 
+          incredibile technologies available today for this purpose. 
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>ETL</b>
       </span><br>
       <span class="sub_title h2">
-        <b>Scripting</b>
+        <b>ETL QA</b>
       </span><br>
       <span class="sub_title h2">
-        <b>Tools Development</b>
+        <b>Query</b>
       </span><br>
       <span class="sub_title h2">
-        <b>Sheets Automation</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Notification</b>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Tutoring</b>
+        <b>Query Debug</b>
       </span><br>
     </div>
   </body>
