better title and meta

--- a/hire.html
+++ b/hire.html
@@ -3,7 +3,7 @@
   <head>
     <title>Data Engineering - Analytics - Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Hire Roberto" content="Enhance your data through meaningful projects and collaborations.">
+    <meta name="Hire Roberto" content="Enhance your data through meaningful collaborations.">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link rel="stylesheet" href="style.css"/>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165277063-1"></script>
