--- a/work.html
+++ b/work.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-GB">
   <head>
-    <title>TO DO</title>                                                                                <!-- TO DO -->
+    <title>Hands On- What can be built together</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Practical Examples" content="TO DO">                                                    <!-- TO DO -->
+    <meta name="Work" content="Build a better version of your company">
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
     <link rel="stylesheet" href="style.css"/>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165277063-1"></script>
