--- a/work.html
+++ b/work.html
@@ -165,15 +165,29 @@
       </span><br>
       <span class="sub_title h2">
         <b>ETL</b>
+        <div class="content">
+          Extract, transform and load is the base of modern data engineering. Any company has the need
+          to build reilable data pipelines, interating with API endpoints as well as databases. This activity if
+          properly done allows a business to scale without perceving downtimes or inconsistencies.
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>ETL QA</b>
+        <div class="content">
+          TO DO
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Query</b>
+        <div class="content">
+          TO DO
+        </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Query Debug</b>
+        <div class="content">
+          TO DO
+        </div><br>
       </span><br>
     </div>
   </body>
