add intro to work page

--- a/work.html
+++ b/work.html
@@ -21,9 +21,13 @@
     </div>
     <div class="main_title_separator__down"></div>
     <div class="section">
-      <span class="h2">
-        <b>Page in development...</b>
-      </span><br><br><br><br>
+      <div class="content">
+        This page (currently under development) has the goal to illustrate what Roberto is
+        able to achieve practically speaking. All these skills have been learn during
+        previous work experiences, but also building personal projects or experiments.
+      </div>
+    </div>
+    <div class="section">
       <span class="sub_title h2">
         <b>BI Audit</b>
         <div class="content">
