--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
     <div class="section">
       <div class="content">
         This page (currently under development) has the goal to illustrate what Roberto is
-        able to achieve practically speaking. All these skills have been learn during
+        able to achieve practically speaking. All these skills have been learnt during
         previous work experiences, but also building personal projects or experiments.
       </div>
     </div>
