--- a/work.html
+++ b/work.html
@@ -23,28 +23,29 @@
     <div class="section">
       <div class="content">
         This page (<i>currently under development</i>) has the goal to illustrate what Roberto is
-        able to achieve practically speaking. All these skills have been learnt during
-        previous work experiences, but also building personal projects or experiments.
+        able to achieve practically speaking, giving for each activity a brief description.
+        All these skills have been learnt during previous work experiences,
+        but also building personal projects or experiments.
       </div>
     </div>
     <div class="section">
       <span class="sub_title h2">
         <b>BI Audit</b>
         <div class="content">
-          The way an organisation implement and structure a Business Intelligence software
-          is one of the first signals about potential inefficiencies. Often from inside an
-          organisation, it is not possibile to understand opportunities  and limitation, 
-          this is why having  a professional looking at the tool from different angles 
-          it is extremely important.
+          The way an organisation implement and structure a BI tool is one of the first
+          signals about potential inefficiencies. At a certain level, from inside an organisation
+          it is not possibile to understand opportunities and limitation, 
+          this is why having a professional looking at the tool from different angles 
+          it is extremely valuable.
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>BI Maintenance</b>
         <div class="content">
-          A Business Intelligence software requires regular maintenance. From managing permissions to 
+          BI tools require regular maintenance. From managing permissions to 
           relocate queries, the number of daily hidden small tasks necessary to keep a system healty 
           and up to date is often underestimate. Any organisation would require a specific role to take 
-          care of these aspects, but it is not always the case. Externalise this activity is a 
+          care of these aspects, but it is not always the case. Externalising this activity is a 
           brave decision able soon pay to high dividends.
         </div><br>
       </span><br>
@@ -52,7 +53,7 @@
         <b>Query Optimisation</b>
         <div class="content">
           Nobody likes slow queries. Data needs to be deliver fast to enahnce decisions 
-          and move the business forward. Sometimes queries can be written better, while in other cases
+          and move business forward. Sometimes queries can be written better, while in other cases
           tables' structure can be optimised allowing faster results. Moreover, queries' style must be
           consistent, allowing a smart reuse of the code already written.
         </div><br>
@@ -61,8 +62,8 @@
         <b>Crawling</b>
         <div class="content">
           Any company faces the need to extract data from the web. For a multitude of reasons, having
-          the possibility to acquire data previously not available can lead to a competititive advantage.
-          Data are out there, but often not easy to access, because of time constrains or technical limitations.
+          the possibility to acquire data previously not available can lead to competititive advantages.
+          Data are out there but often not easy to access, because of time constrains or technical limitations.
           Rely on reilable and scalable web crawers to bring your data to a next level. 
         </div><br>
       </span><br>
@@ -71,16 +72,14 @@
         <div class="content">
           The biggest part of a machine learning project is the iterative process of
           features defining and features improvement. This activity can be considered boring
-          from a data scientist point of view, because it is not directly connected with the algorithms behind the learning pipeline. However, this part is crucial and important as the algorithm itself if not even more.
-          Get support and help not only to define features, but also produce and manintain them.
+          from a data scientist point of view, because not directly connected with algorithms behind the learning pipeline. However, this part is crucial and important as the algorithm itself if not even more.
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Automation</b>
         <div class="content">
           This section does not need presentation. A digital business not able to automise processes 
-          will face sooner or later big troubles. Growing a team instead of building tools is the perfect way 
-          to waste money and energies. Automate from the day one in order to keep focusing on what
+          will face sooner or later big troubles. Automate from the day one in order to keep focusing on what
           really matters: your business.
         </div><br>
       </span><br>
@@ -89,24 +88,23 @@
       </span><br>
         <div class="content">
           Marketing is probably the department where automation can be more significant and disruptive.
-          Not a case, marketing is also one of the biggest cost cente. Specific skills and talent is needed to
+          Indeed, marketing is also one of the biggest cost cente. Specific skills and talent are required to
           drive leads to a company, that's why time cannot be wasted dealing with data in unproductive ways.
-          Free your marketing department from non value added activities leaving information's flow in expert hands.
+          Free your marketing department from non value added activities.
         </div><br>
       <span class="sub_title h2">
         <b>KPIs Audit</b>
         <div class="content">
           KPIs are at the core of a business. Theoretically any process would require to be 
-          monitored by a KPI. There is however the bad habit to spend more time defining and building KPIs 
-          then using it. Let's make a step back, identify metrics that really matter and evolve the way 
-          they are produced and consumed.
+          monitored by a KPI. There is however a bad habit to spend more time defining and building KPIs 
+          then using it. A wise decision is often to make a step back.
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Analysis</b>
         <div class="content">
           Diving into data with the goal to analyze them is a must have skill for any person working in the
-          digital industry. However, often things get more complex and articulated. Specific tools and 
+          digital industry. However, things get easily more complex and articulated. Specific tools and 
           techniques are required to provide puntual, correct and reprudicible analysis.
         </div><br>
       </span><br>
@@ -115,7 +113,7 @@
         <div class="content">
           In the last ten years the activity of reporting has known an immense switch due to the rise 
           of web technologies. Nowdays is not accattable anymore to rely on a person to receive a report
-          at the same hour on a daily basis. Understand how to modernize your whole reporting structure.
+          at the same hour on a daily basis. It is never to late to modernize your reporting structure.
         </div><br>
       </span><br>
       <span class="sub_title h2">
@@ -128,23 +126,25 @@
       <span class="sub_title h2">
         <b>API Development</b>
         <div class="content">
-          API endpoint are critical for a business to allow external players to interact with internal data,
-          but also to ensure a fluid flow of information within internal systems. Standardise the creation of API endpoints with modern and light technologies, while having always in control their cost and performances. 
+          API endpoints are critical for a business, because they allow external players to interact
+          with internal data, but also to ensure a fluid flow of information within internal systems.
+          Standardise the creation of API endpoints with modern and light technologies,
+          while having always in control costs and performances. 
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>API Reverse Engineering</b>
         <div class="content">
           Activity strictly connected with web crawling, but also with computer security.
-          Without dealing with espionage or unethical things, reverse engineering API is
-          necessary because sometimes documentation of a service is not properly done, so there is the
+          Without dealing with espionage or unethical things, API reverse engineering is
+          necessary for example because documentation is not properly done, so there is the
           need to self understand how things work.
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Scripting and tools</b>
         <div class="content">
-          The necessity of a digital business are so variagate and colourful that are not possible to be
+          Digital business' Necessities are so variagate and colourful that are not possible to be
           categorised under a single umbrella. Any kind of small script and tool can save precious time,
           especially if an activity must be repeated multiple time. It is important to have a person 
           in a team able to make colleagues' life easier and more pleasant.
@@ -154,17 +154,18 @@
         <b>Sheets Automation</b>
         <div class="content">
           For years many have tried to get rid of sheets, but the true is that they are here to stay.
-          Another true is that sheets are getting better and better, making them easier to use,
-          more intuitive and progrmamable. There are people with the talent to make sheets looking beauty 
+          Moreover, sheets are getting better and better, making them easier to use,
+          more intuitive and programmable. There are people with the talent to make sheets looking beauty 
           and sexy, it is a luck to work closely with such a profile. 
         </div><br>
       </span><br>
       <span class="sub_title h2">
         <b>Notification</b>
         <div class="content">
-          As anything else, also notifications have the right to be pleasant to be received and to be
-          consumed. It is not time anymore to spam unreadable bad formatted messages, considering 
-          incredibile technologies available today for this purpose. 
+          As anything else, also notifications can be pleasant to be received and to be
+          consumed if properly designed. It is not time anymore to spam around unreadable 
+          bad formatted messages, considering the incredibile technologies available today 
+          for this purpose. 
         </div><br>
       </span><br>
       <span class="sub_title h2">
