better elements and css for small devices

--- a/work.html
+++ b/work.html
@@ -29,166 +29,166 @@
       </div>
     </div>
     <div class="section">
-      <span class="sub_title h2">
-        <b>BI Audit</b>
+      <div class="bottom_space">
+        <b class="h2">BI Audit</b>
         <div class="content">
           The way an organisation implement and structure a BI tool is one of the first
           signals about potential inefficiencies. At a certain level, from inside an organisation
           it is not possible anymore to understand opportunities and limitations. 
           This is why having a professional looking at the tool from different angles 
           cane be extremely valuable.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>BI Maintenance</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">BI Maintenance</b>
         <div class="content">
           BI tools require regular maintenance. From managing permissions to 
           relocate queries, the number of daily hidden small tasks necessary to keep a system healthy 
           and up to date is often underestimated. Any organisation would require a specific role to take 
           care of these aspects, but it is not always the case, leading during time to outdated systems.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Query Debug</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Query Debug</b>
         <div class="content">
           Queries are getting slower, or they are presenting wrong results, and you do not know why.
           With patience and dedication, even the most complex query can be divided into small pieces of code,
           making easier to debug it understanding what is not working, and most importantly, why.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Query Optimisation</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Query Optimisation</b>
         <div class="content">
           Nobody likes slow queries. Data needs to be delivered fast to enhance decisions 
           and move business forward. Sometimes queries can be written better, while in other cases
           tables' structure can be optimised allowing faster results. Moreover, queries' style must be
           consistent, allowing a smart reuse of the code already written.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Crawling</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Crawling</b>
         <div class="content">
           Any company faces the need to extract data from the web. For a multitude of reasons, having
           the possibility to acquire data previously not available can lead to competitive advantages.
           Data are out there, but often not easy to access, because of time constraints or technical limitations.
           Rely on reliable and scalable web crawlers to bring your data to a next level. 
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Features Engineering</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Features Engineering</b>
         <div class="content">
           The biggest part of a machine learning project is the iterative process of
           features defining and features improvement. This activity can be considered boring
           from a data scientist point of view, because not directly connected with algorithms behind the learning pipeline. However, this part is crucial and important as the algorithm itself if not even more.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Automation</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Automation</b>
         <div class="content">
           This section does not need presentation. A digital business not able to automise processes 
           will face sooner or later big troubles. Automate from the day one in order to keep focus on what
           really matters: your business.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Marketing Automation</b>
-      </span><br>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Marketing Automation</b>
         <div class="content">
           Marketing is probably the department where automation can be more significant and disruptive.
           Indeed, marketing is also one of the biggest cost centre. Specific skills and talent are required to
           drive leads to a company, that's why time cannot be wasted dealing with data in unproductive ways.
-        </div><br>
-      <span class="sub_title h2">
-        <b>KPIs Audit</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">KPIs Audit</b>
         <div class="content">
           KPIs are at the core of a business. Theoretically, any process would require monitoring by a KPI.
           There is however a bad habit to spend more time defining and building KPIs 
           than using it. A wise decision is often to make a step back.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Analysis</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Analysis</b>
         <div class="content">
           Diving into data with the goal to analyze them is a must have skill for any person working in the
           digital industry. However, things easily get too complex and articulated. Specific tools and 
           techniques are required to provide punctual, correct and reproducible analysis.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Reporting</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Reporting</b>
         <div class="content">
           In the last ten years the activity of reporting has known an immense switch due to the rise 
           of web technologies. Nowadays is not acceptable anymore to rely on a person to receive a report
           at the same hour on a daily basis. It is never too late to modernize your reporting structure.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Dashboard</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Dashboard</b>
         <div class="content">
           A dashboard should not only be considered as data, queries and charts.
           A dashboard is a story, combining design, aesthetics, UX and UI. Details are essential, as colors, backgrounds, fonts, sizes, titles, positions, headers, alignments, approachability, efficiency and engagement. A dashboard is a real product with real use cases and real users.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>API Development</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">API Development</b>
         <div class="content">
           API endpoints are critical for a business, because they allow interaction with external players,
           but also to ensure a fluid flow of information within internal systems.
           Standardise the creation of API endpoints with modern and light technologies,
           while having always in control costs and performances. 
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>API Reverse Engineering</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">API Reverse Engineering</b>
         <div class="content">
           Activity strictly connected with web crawling, but also with computer security.
           Without dealing with espionage or unethical things, API reverse engineering can
           be necessary because documentation is not properly done, so there is the
           need to self understand how things work.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Scripting and tools</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Scripting and tools</b>
         <div class="content">
           Digital business' necessities are so variegated and colourful that is not possible to be
           categorised under a single umbrella. Any kind of small script and tool can save precious time,
           especially if an activity must be repeated multiple times.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Sheets Automation</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Sheets Automation</b>
         <div class="content">
           For years many have tried to get rid of sheets, but the truth is that they are here to stay.
           Moreover, sheets are getting better, making them easier to use,
           more intuitive and programmable. There are people with the talent to make working with sheets
           a pleasant experience, it is a luck to work closely with such a profile. 
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>Notification</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">Notification</b>
         <div class="content">
           As anything else, notifications if properly designed can be pleasant to be received and to be
           consumed. It is not time anymore to spam around unreadable bad formatted messages,
           taking into account the incredibles technologies available today for this exact purpose. 
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>ETL</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">ETL</b>
         <div class="content">
           Extract, transform and load is the core of modern data engineering. Any company has the need
           to build reliable data pipelines, interacting with API endpoints as well as databases.
           This activity must grant to a business the flexibility to scale without perceiving
           downtimes or inconsistencies.
-        </div><br>
-      </span><br>
-      <span class="sub_title h2">
-        <b>ETL QA</b>
+        </div>
+      </div>
+      <div class="bottom_space">
+        <b class="h2">ETL QA</b>
         <div class="content">
           Once an ETL pipeline is done, it is time to test if outputs are correct.
           This activity is extremely important and can be achieved using proper techniques and technologies.
           A good practice is to let evaluate the correctness of an ETL not to the person who has written it. 
-        </div><br>
-      </span><br>
+        </div>
+      </div>
     </div>
   </body>
 </html>
