--- a/work.html
+++ b/work.html
@@ -22,7 +22,7 @@
     <div class="main_title_separator__down"></div>
     <div class="section">
       <div class="content">
-        This page (<i>steadily under development</i>) has the goal to illustrate what Roberto is
+        This page (<i>always under development</i>) has the goal to illustrate what Roberto is
         able to achieve practically speaking, giving for each activity a brief description.
         All these skills have been learnt during previous work experiences,
         but also building personal projects or experiments.
