--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
       <div class="content">
         This page (<i>always under development</i>) has the goal to illustrate what Roberto is
         able to achieve practically speaking, giving for each activity a brief description.
-        All these skills have been learnt during previous work experiences,
+        All these skills have been learnt during work experiences,
         but also building personal projects or experiments.
       </div>
     </div>
@@ -32,11 +32,11 @@
       <div class="bottom_space">
         <b class="h2">BI Audit</b>
         <div class="content">
-          The way an organisation implement and structure a BI tool is one of the first
-          signals about potential inefficiencies. At a certain level, from inside an organisation
+          The way an organisation implements and structures a BI tool is one of the first
+          signals about potential inefficiencies. At a certain level within an organisation
           it is not possible anymore to understand opportunities and limitations. 
           This is why having a professional looking at the tool from different angles 
-          cane be extremely valuable.
+          can be extremely valuable.
         </div>
       </div>
       <div class="bottom_space">
@@ -45,21 +45,21 @@
           BI tools require regular maintenance. From managing permissions to 
           relocate queries, the number of daily hidden small tasks necessary to keep a system healthy 
           and up to date is often underestimated. Any organisation would require a specific role to take 
-          care of these aspects, but it is not always the case, leading during time to outdated systems.
+          care of these aspects, but is not always the case, leading during time to outdated systems.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Query Debug</b>
         <div class="content">
-          Queries are getting slower, or they are presenting wrong results, and you do not know why.
+          Queries are getting slower, or presenting wrong results, and nobody knows why.
           With patience and dedication, even the most complex query can be divided into small pieces of code,
-          making easier to debug it understanding what is not working, and most importantly, why.
+          making it easier to debug, understanding what is not working, and most importantly, why is not working.
         </div>
       </div>
       <div class="bottom_space">
         <b class="h2">Query Optimisation</b>
         <div class="content">
-          Nobody likes slow queries. Data needs to be delivered fast to enhance decisions 
+          Nobody likes slow queries. Data need to be delivered fast to enhance decisions 
           and move business forward. Sometimes queries can be written better, while in other cases
           tables' structure can be optimised allowing faster results. Moreover, queries' style must be
           consistent, allowing a smart reuse of the code already written.
@@ -70,7 +70,7 @@
         <div class="content">
           Any company faces the need to extract data from the web. For a multitude of reasons, having
           the possibility to acquire data previously not available can lead to competitive advantages.
-          Data are out there, but often not easy to access, because of time constraints or technical limitations.
+          Data are out there, but frequently not easy to access, because of time constraints or technical limitations.
           Rely on reliable and scalable web crawlers to bring your data to a next level. 
         </div>
       </div>
@@ -79,7 +79,7 @@
         <div class="content">
           The biggest part of a machine learning project is the iterative process of
           features defining and features improvement. This activity can be considered boring
-          from a data scientist point of view, because not directly connected with algorithms behind the learning pipeline. However, this part is crucial and important as the algorithm itself if not even more.
+          from a data scientist point of view, because not directly connected with algorithms behind the learning pipeline. However, it is crucial and important as the algorithm itself if not even more.
         </div>
       </div>
       <div class="bottom_space">
@@ -150,8 +150,8 @@
       <div class="bottom_space">
         <b class="h2">Scripting and tools</b>
         <div class="content">
-          Digital business' necessities are so variegated and colourful that is not possible to be
-          categorised under a single umbrella. Any kind of small script and tool can save precious time,
+          Digital businesses' necessities are so variegated and colourful that is not possible to be
+          categorised them under a single umbrella. Any kind of small script or tool can save precious time,
           especially if an activity must be repeated multiple times.
         </div>
       </div>
@@ -162,14 +162,6 @@
           Moreover, sheets are getting better, making them easier to use,
           more intuitive and programmable. There are people with the talent to make working with sheets
           a pleasant experience, it is a luck to work closely with such a profile. 
-        </div>
-      </div>
-      <div class="bottom_space">
-        <b class="h2">Notification</b>
-        <div class="content">
-          As anything else, notifications if properly designed can be pleasant to be received and to be
-          consumed. It is not time anymore to spam around unreadable bad formatted messages,
-          taking into account the incredibles technologies available today for this exact purpose. 
         </div>
       </div>
       <div class="bottom_space">
@@ -186,8 +178,16 @@
         <div class="content">
           Once an ETL pipeline is done, it is time to test if outputs are correct.
           This activity is extremely important and can be achieved using proper techniques and technologies.
-          A good practice is to let evaluate the correctness of an ETL not to the person who has written it. 
+          A good practice is letting evaluate the ETL's correctness not to the person who wrote it. 
         </div>
+      <div class="bottom_space">
+        <b class="h2">Notification</b>
+        <div class="content">
+          As anything else, notifications if properly designed can be pleasant to be received and to be
+          consumed. It is not time anymore to spam around unreadable bad formatted messages,
+          taking into account the incredibles technologies available today for this exact purpose. 
+        </div>
+      </div>
       </div>
     </div>
   </body>
