fix small devices issues

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main_title_separator__up"></div>
     <div class="main_title h1">
-      <b>Roberto</b>Malcotti<br>
+      <b>Roberto</b><br class="mobile-break">Malcotti<br>
     </div>
     <div class="main_title_separator__down"></div>
     <div class="section">
