add missing div

--- a/work.html
+++ b/work.html
@@ -180,6 +180,7 @@
           This activity is extremely important and can be achieved using proper techniques and technologies.
           A good practice is letting evaluate the ETL's correctness not to the person who wrote it. 
         </div>
+      </div>
       <div class="bottom_space">
         <b class="h2">Notification</b>
         <div class="content">
